crates/cribo/tests/snapshots/execution_results@tree_shake_function_local_bindings.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/tree_shake_function_local_bindings/main.py
---
ExecutionResults {
    status: Success,
    stdout: "parameter|local|comprehension|exception|pattern|loop|6|nested-import|method-import|global-dependency|class-body",
    stderr: "",
}
