crates/cribo/tests/snapshots/execution_results@tree_shake_match_dependencies.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/tree_shake_match_dependencies/main.py
---
ExecutionResults {
    status: Success,
    stdout: "handled:ready",
    stderr: "",
}
