crates/cribo/tests/snapshots/execution_results@type_alias_conflict.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/type_alias_conflict/main.py
---
ExecutionResults {
    status: Success,
    stdout: "True\nTrue",
    stderr: "",
}
