crates/cribo/tests/snapshots/execution_results@walrus_shadows_importlib.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/walrus_shadows_importlib/main.py
---
ExecutionResults {
    status: Success,
    stdout: "real: bundled helper\ncustom: custom:helper",
    stderr: "",
}
