crates/cribo/tests/snapshots/execution_results@wrapper_class_dunder_scope.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/wrapper_class_dunder_scope/main.py
---
ExecutionResults {
    status: Success,
    stdout: "provider loaded\nbody: local\nmethod: provider\ninner: provider\nconditional: provider",
    stderr: "",
}
