crates/cribo/tests/snapshots/execution_results@wrapper_decorator_shared_identity.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/wrapper_decorator_shared_identity/main.py
---
ExecutionResults {
    status: Success,
    stdout: "provider loaded\nshared loaded\nsame object: True\nmodule: shared\nqualname: canonical\ncall: canonical result",
    stderr: "",
}
