crates/cribo/tests/snapshots/execution_results@wrapper_dunder_comprehension.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/wrapper_dunder_comprehension/main.py
---
ExecutionResults {
    status: Success,
    stdout: "provider loaded\nvalues: ['PROVIDER']",
    stderr: "",
}
