crates/cribo/tests/snapshots/execution_results@wrapper_dunder_rebinding.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/wrapper_dunder_rebinding/main.py
---
ExecutionResults {
    status: Success,
    stdout: "before: provider\nafter: renamed_provider\nmodule name: renamed_provider\nentry name: __main__",
    stderr: "",
}
