crates/cribo/tests/snapshots/execution_results@wrapper_globals_read.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/wrapper_globals_read/main.py
---
ExecutionResults {
    status: Success,
    stdout: "reported: provider\nregistered: 42\nentry untouched: True",
    stderr: "",
}
