crates/cribo/tests/snapshots/execution_results@wrapper_module_doc.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/wrapper_module_doc/main.py
---
ExecutionResults {
    status: Success,
    stdout: "documented loaded\nundocumented loaded\ndoc: The documented provider's docstring.\nself view: The documented provider's docstring.\nmissing doc: None",
    stderr: "",
}
