crates/cribo/tests/snapshots/execution_results@wrapper_replacement_decorator.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/wrapper_replacement_decorator/main.py
---
ExecutionResults {
    status: Success,
    stdout: "provider loaded\nwrapped: 42\nconstant: alive",
    stderr: "",
}
